Cleanup mainly for querydsl-sql-codegen (#788)
Co-authored-by: Marvin <velo@users.noreply.github.com>